# brick-icons

./: .gitignore  HANDOFF.md  README.md  labels.toml  parts.txt  pyproject.toml  specimens.txt
brick_icons/: __init__.py  arcfit.py  cli.py  config.py  geom2d.py  hlr.py  library.py  primitives.py  process.py  render.py  repair.py  shade.py  trace.py
docs/superpowers/: 2026-06-28-handoff-primitive-substitution.md
docs/superpowers/plans/: 2026-06-27-lego-bin-labels.md  2026-06-28-hlr-outline.md  2026-06-28-primitive-substitution.md  2026-07-03-scaled-svg-library-and-shading.md  2026-07-04-mesh-repair.md  2026-07-05-booleans-fragments-cones.md  2026-07-05-primitive-classes.md
docs/superpowers/specs/: 2026-06-27-lego-bin-labels-design.md  2026-06-28-hlr-outline-design.md  2026-06-28-primitive-substitution-design.md  2026-07-03-scaled-svg-library-and-shading-design.md  2026-07-04-mesh-repair-design.md  2026-07-05-booleans-fragments-cones-design.md  2026-07-05-primitive-classes-design.md
lego_bin_labels/: cli.py  config.py  process.py
scripts/: render-contact-sheet.sh  render-gallery.sh  setup-ldview.sh
tests/: conftest.py  test_arcfit.py  test_cli.py  test_config.py  test_geom2d.py  test_hlr.py  test_library.py  test_primitives.py  test_process.py  test_render.py  test_repair.py  test_shade.py  test_trace.py
